added review section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,56 @@
                 </div>
             </div>
         </div>
+        <div class="rev-container">
+            <div class="rev-header">
+                <h1 class="rev-title">REVIEWS</h1>
+                <button class="rev-button">SEE ALL</button>
+            </div>
+            <div class="rev-cards">
+                <div class="rev-card">
+                    <div class="rev-info">
+                        <div>
+                            <h3 class="rev-quality">Good Quality</h3>
+                            <p class="rev-text">I highly recommend shopping from kicks</p>
+                            <div class="rev-rating">
+                                ⭐⭐⭐⭐⭐ <span>5.0</span>
+                            </div>
+                        </div>
+                        <img class="rev-avatar" src="https://randomuser.me/api/portraits/men/32.jpg" alt="avatar">
+                    </div>
+                    <img class="rev-img" src="rev1.png" alt="shoes">
+                </div>
+
+                <div class="rev-card">
+                    <div class="rev-info">
+                        <div>
+                            <h3 class="rev-quality">Good Quality</h3>
+                            <p class="rev-text">I highly recommend shopping from kicks</p>
+                            <div class="rev-rating">
+                                ⭐⭐⭐⭐⭐ <span>5.0</span>
+                            </div>
+                        </div>
+                        <img class="rev-avatar" src="https://randomuser.me/api/portraits/men/45.jpg" alt="avatar">
+                    </div>
+                    <img class="rev-img" src="rev2.png" alt="shoes">
+                </div>
+
+                <div class="rev-card">
+                    <div class="rev-info">
+                        <div>
+                            <h3 class="rev-quality">Good Quality</h3>
+                            <p class="rev-text">I highly recommend shopping from kicks</p>
+                            <div class="rev-rating">
+                                ⭐⭐⭐⭐⭐ <span>5.0</span>
+                            </div>
+                        </div>
+                        <img class="rev-avatar" src="https://randomuser.me/api/portraits/men/12.jpg" alt="avatar">
+                    </div>
+                    <img class="rev-img" src="rev3.png" alt="shoes">
+                </div>
+            </div>
+        </div>
+
 
     </div>
 </body>
