added footer and review section

--- a/index.html
+++ b/index.html
@@ -169,6 +169,61 @@
                 </div>
             </div>
         </div>
+        <div class="foot-container">
+            <div class="foot-top">
+                <div class="foot-left">
+                    <h2 class="foot-heading">JOIN OUR KICKSPLUS<br>CLUB & GET 15% OFF</h2>
+                    <p class="foot-subtext">Sign up for free! Join the community.</p>
+                    <div class="foot-input-group">
+                        <input type="email" placeholder="Email address" class="foot-input" />
+                        <button class="foot-submit">SUBMIT</button>
+                    </div>
+                </div>
+                <img src="kicksWhite.svg" alt="KICKS Logo" class="foot-logo" />
+            </div>
+
+            <div class="foot-bottom">
+                <div class="foot-section foot-about">
+                    <h3 class="foot-title">About us</h3>
+                    <p class="foot-desc">We are the biggest hyperstore in the universe.<br>We got you all cover with our
+                        exclusive<br>collections and latest drops.</p>
+                </div>
+
+                <div class="foot-section">
+                    <h3 class="foot-title">Categories</h3>
+                    <ul class="foot-list">
+                        <li>Runners</li>
+                        <li>Sneakers</li>
+                        <li>Basketball</li>
+                        <li>Outdoor</li>
+                        <li>Golf</li>
+                        <li>Hiking</li>
+                    </ul>
+                </div>
+
+                <div class="foot-section">
+                    <h3 class="foot-title">Company</h3>
+                    <ul class="foot-list">
+                        <li>About</li>
+                        <li>Contact</li>
+                        <li>Blogs</li>
+                    </ul>
+                </div>
+
+                <div class="foot-section">
+                    <h3 class="foot-title">Follow us</h3>
+                    <div class="foot-socials">
+                        <span>🌐</span>
+                        <span>📷</span>
+                        <span>🐦</span>
+                        <span>🎵</span>
+                    </div>
+                </div>
+            </div>
+            <div class="foot-end">
+                <img src="kicksWhite.svg" alt="">
+            </div>
+        </div>
 
 
     </div>
