--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KICKS</title>
+    <link rel="icon" href="./kicksWhite.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 
 
 </head>
@@ -213,10 +216,10 @@
                 <div class="foot-section">
                     <h3 class="foot-title">Follow us</h3>
                     <div class="foot-socials">
-                        <span>🌐</span>
-                        <span>📷</span>
-                        <span>🐦</span>
-                        <span>🎵</span>
+                        <span><i class="fa-solid fa-globe"></i></span>
+                        <span><i class="fa-brands fa-instagram"></i></span>
+                        <span><i class="fa-brands fa-x-twitter"></i></span>
+                        <span><i class="fa-brands fa-tiktok"></i></span>
                     </div>
                 </div>
             </div>
