added Responsive styling and added seperate navbar for phone

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
             <button class="cart-btn" aria-label="Cart">0</button>
         </div>
     </nav>
+    <nav class="mobile-navbar">
+        <div class="mobile-navbar-header">
+            <span class="mobile-navbar-logo"><img src="./kicks.svg" alt="Logo" width="120"></span>
+            <button class="hamburger" aria-label="Open Menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+        </div>
+        <div class="mobile-navbar-menu">
+            <a href="#" class="mobile-navbar-link active">New Drops <span>🔥</span></a>
+            <a href="#" class="mobile-navbar-link">Men <span class="dropdown">▼</span></a>
+            <a href="#" class="mobile-navbar-link">Women <span class="dropdown">▼</span></a>
+            <a href="#" class="mobile-navbar-link"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
+            <a href="#" class="mobile-navbar-link"><i class="fa-regular fa-user"></i> Account</a>
+            <a href="#" class="mobile-navbar-link"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+        </div>
+    </nav>
 
     <div class="container">
         <div class="hero-container">
@@ -230,6 +248,7 @@
 
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
