--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="text-overlay">
                     <h1>NIKE AIR MAX</h1>
                     <p>Nike introducing the new air max for everyone’s comfort</p>
-                    <button>SHOP NOW</button>
+                    <button onclick="window.location.href='product.html'">SHOP NOW</button>
                 </div>
 
                 <div class="side-label">Nike product of the year</div>
@@ -85,32 +85,32 @@
                     <h1>DON'T MISS OUT</h1>
                     <h1>NEW DROPS</h1>
                 </div>
-                <button>SHOP NEW DROPS</button>
+                <button onclick="window.location.href='product.html'">SHOP NEW DROPS</button>
             </div>
             <div class="lp2">
                 <div class="product-box">
                     <div class="badge">New</div>
                     <img src="shoe1.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
-                    <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
+                    <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
                     <img src="shoe2.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
-                    <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
+                    <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
                     <img src="shoe3.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
-                    <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
+                    <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
                     <img src="shoe4.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
-                    <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
+                    <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
                     <img src="lifestyle.png" alt="Lifestyle Shoes" />
                     <div class="category-info">
                         <h1>LIFESTYLE <br> SHOES</h1>
-                        <button class="arrow-btn">&#8599;</button>
+                        <button class="arrow-btn" onclick="window.location.href='product.html'">&#8599;</button>
                     </div>
                 </div>
 
@@ -136,7 +136,7 @@
                     <img src="basketball.png" alt="Basketball Shoes" />
                     <div class="category-info">
                         <h1>BASKETBALL <br> SHOES</h1>
-                        <button class="arrow-btn">&#8599;</button>
+                        <button class="arrow-btn" onclick="window.location.href='product.html'">&#8599;</button>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
         <div class="rev-container">
             <div class="rev-header">
                 <h1 class="rev-title">REVIEWS</h1>
-                <button class="rev-button">SEE ALL</button>
+                <button class="rev-button" onclick="window.location.href='product.html'">SEE ALL</button>
             </div>
             <div class="rev-cards">
                 <div class="rev-card">
