Updated Project stucture (Testing with Cursor)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KICKS</title>
-    <link rel="icon" href="./kicksWhite.svg" type="image/svg+xml">
+    <link rel="icon" href="./assets/home/kicksWhite.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
@@ -21,7 +21,7 @@
             <a href="#" class="navbar-link">Women <span class="dropdown">▼</span></a>
         </div>
         <div class="navbar-center">
-            <span class="navbar-logo"><img style="color: black;" src="./kicks.svg" alt="Logo" width="190"></span>
+            <span class="navbar-logo"><img style="color: black;" src="./assets/home/kicks.svg" alt="Logo" width="190"></span>
         </div>
         <div class="navbar-right">
             <button class="navbar-icon" aria-label="Search">
@@ -45,7 +45,7 @@
     </nav>
     <nav class="mobile-navbar">
         <div class="mobile-navbar-header">
-            <span class="mobile-navbar-logo"><img src="./kicks.svg" alt="Logo" width="120"></span>
+            <span class="mobile-navbar-logo"><img src="./assets/home/kicks.svg" alt="Logo" width="120"></span>
             <button class="hamburger" aria-label="Open Menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -66,7 +66,7 @@
         <div class="hero-container">
             <h1 class="hero-title">DO IT <span>RIGHT</span></h1>
             <section class="hero">
-                <img class="hero-img" src="./hero-1.jpg" alt="" />
+                <img class="hero-img" src="./assets/home/hero-1.jpg" alt="" />
 
 
                 <div class="text-overlay">
@@ -90,25 +90,25 @@
             <div class="lp2">
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe1.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe1.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe2.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe2.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe3.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe3.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe4.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe4.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn" onclick="window.location.href='product.html'">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
@@ -125,7 +125,7 @@
 
             <div class="categories-content">
                 <div class="category-card card1">
-                    <img src="lifestyle.png" alt="Lifestyle Shoes" />
+                    <img src="assets/home/lifestyle.png" alt="Lifestyle Shoes" />
                     <div class="category-info">
                         <h1>LIFESTYLE <br> SHOES</h1>
                         <button class="arrow-btn" onclick="window.location.href='product.html'">&#8599;</button>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="category-card">
-                    <img src="basketball.png" alt="Basketball Shoes" />
+                    <img src="assets/home/basketball.png" alt="Basketball Shoes" />
                     <div class="category-info">
                         <h1>BASKETBALL <br> SHOES</h1>
                         <button class="arrow-btn" onclick="window.location.href='product.html'">&#8599;</button>
@@ -158,7 +158,7 @@
                         </div>
                         <img class="rev-avatar" src="https://randomuser.me/api/portraits/men/32.jpg" alt="avatar">
                     </div>
-                    <img class="rev-img" src="rev1.png" alt="shoes">
+                    <img class="rev-img" src="assets/home/rev1.png" alt="shoes">
                 </div>
 
                 <div class="rev-card">
@@ -172,7 +172,7 @@
                         </div>
                         <img class="rev-avatar" src="https://randomuser.me/api/portraits/men/45.jpg" alt="avatar">
                     </div>
-                    <img class="rev-img" src="rev2.png" alt="shoes">
+                    <img class="rev-img" src="assets/home/rev2.png" alt="shoes">
                 </div>
 
                 <div class="rev-card">
@@ -186,7 +186,7 @@
                         </div>
                         <img class="rev-avatar" src="https://randomuser.me/api/portraits/men/12.jpg" alt="avatar">
                     </div>
-                    <img class="rev-img" src="rev3.png" alt="shoes">
+                    <img class="rev-img" src="assets/home/rev3.png" alt="shoes">
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                         <button class="foot-submit">SUBMIT</button>
                     </div>
                 </div>
-                <img src="kicksWhite.svg" alt="KICKS Logo" class="foot-logo" />
+                <img src="assets/home/kicksWhite.svg" alt="KICKS Logo" class="foot-logo" />
             </div>
 
             <div class="foot-bottom">
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div class="foot-end">
-                <img src="kicksWhite.svg" alt="">
+                <img src="assets/home/kicksWhite.svg" alt="">
             </div>
         </div>
 
