--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KICKS</title>
-    <link rel="icon" href="./kicksWhite.svg" type="image/svg+xml">
+    <link rel="icon" href="./assets/home/kicksWhite.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -22,7 +22,7 @@
             <a href="#" class="navbar-link">Women <span class="dropdown">▼</span></a>
         </div>
         <div class="navbar-center">
-            <span class="navbar-logo"><img style="color: black;" src="./kicks.svg" alt="Logo" width="190"></span>
+            <span class="navbar-logo"><img style="color: black;" src="./assets/home/kicks.svg" alt="Logo" width="190"></span>
         </div>
         <div class="navbar-right">
             <button class="navbar-icon" aria-label="Search">
@@ -46,7 +46,7 @@
     </nav>
     <nav class="mobile-navbar">
         <div class="mobile-navbar-header">
-            <span class="mobile-navbar-logo"><img src="./kicks.svg" alt="Logo" width="120"></span>
+            <span class="mobile-navbar-logo"><img src="./assets/home/kicks.svg" alt="Logo" width="120"></span>
             <button class="hamburger" aria-label="Open Menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -67,16 +67,16 @@
         <div class="product-view">
             <div class="product-images">
                 <div class="main-image">
-                    <img src="shoe1.png" alt="ADIDAS 4DFWD X PARLEY RUNNING SHOES" />
+                    <img src="assets/home/shoe1.png" alt="ADIDAS 4DFWD X PARLEY RUNNING SHOES" />
                 </div>
                 <div class="lifestyle-image">
-                    <img src="shoe2.png" alt="Lifestyle view of running shoes" />
+                    <img src="assets/home/shoe2.png" alt="Lifestyle view of running shoes" />
                 </div>
                 <div class="closeup-front">
-                    <img src="shoe3.png" alt="Close-up front view of running shoes" />
+                    <img src="assets/home/shoe3.png" alt="Close-up front view of running shoes" />
                 </div>
                 <div class="closeup-side">
-                    <img src="shoe4.png" alt="Close-up side view of running shoes" />
+                    <img src="assets/home/shoe4.png" alt="Close-up side view of running shoes" />
                 </div>
             </div>
             <div class="product-details">
@@ -143,25 +143,25 @@
             <div class="lp2">
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe1.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe1.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe2.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe2.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe3.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe3.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
                 <div class="product-box">
                     <div class="badge">New</div>
-                    <img src="shoe4.png" alt="Adidas Shoe" class="product-img" />
+                    <img src="assets/home/shoe4.png" alt="Adidas Shoe" class="product-img" />
                     <h3 class="product-title">ADIDAS 4DFWD X PARLEY RUNNING SHOES</h3>
                     <button class="product-btn">VIEW PRODUCT - <span class="price">$125</span></button>
                 </div>
@@ -177,7 +177,7 @@
                         <button class="foot-submit">SUBMIT</button>
                     </div>
                 </div>
-                <img src="kicksWhite.svg" alt="KICKS Logo" class="foot-logo" />
+                <img src="assets/home/kicksWhite.svg" alt="KICKS Logo" class="foot-logo" />
             </div>
 
             <div class="foot-bottom">
@@ -219,7 +219,7 @@
                 </div>
             </div>
             <div class="foot-end">
-                <img src="kicksWhite.svg" alt="">
+                <img src="assets/home/kicksWhite.svg" alt="">
             </div>
         </div>
 
