fixed Ai hallucinations on footer in listing.html ; Fixed button href location in index.html in featured products section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <h1>DON'T MISS OUT</h1>
                     <h1>NEW DROPS</h1>
                 </div>
-                <button onclick="window.location.href='product.html'">SHOP NEW DROPS</button>
+                <button onclick="window.location.href='listing.html'">SHOP NEW DROPS</button>
             </div>
             
             <!-- Product grid with featured items -->
