--- a/listing.html
+++ b/listing.html
@@ -329,33 +329,33 @@
         </div>
 
         <!-- Footer Section -->
-        <div class="bottom-area">
+        <div class="foot-container">
             <!-- Newsletter signup section -->
-            <div class="top-footer">
-                <div class="footer-left-part">
-                    <h2 class="footer-big-text">JOIN OUR KICKSPLUS<br>CLUB & GET 15% OFF</h2>
-                    <p class="footer-small-text">Sign up for free! Join the community.</p>
-                    <div class="email-signup">
-                        <input type="email" placeholder="Email address" class="email-field" />
-                        <button class="send-button">SUBMIT</button>
+            <div class="foot-top">
+                <div class="foot-left">
+                    <h2 class="foot-heading">JOIN OUR KICKSPLUS<br>CLUB & GET 15% OFF</h2>
+                    <p class="foot-subtext">Sign up for free! Join the community.</p>
+                    <div class="foot-input-group">
+                        <input type="email" placeholder="Email address" class="foot-input" />
+                        <button class="foot-submit">SUBMIT</button>
                     </div>
                 </div>
-                <img src="assets/home/kicksWhite.svg" alt="KICKS Logo" class="tiny-logo" />
+                <img src="assets/home/kicksWhite.svg" alt="KICKS Logo" class="foot-logo" />
             </div>
 
             <!-- Footer navigation and links -->
-            <div class="lower-footer">
+            <div class="foot-bottom">
                 <!-- About us section -->
-                <div class="footer-block about-us-info">
-                    <h3 class="section-title">About us</h3>
-                    <p class="info-words">We are the biggest hyperstore in the universe.<br>We got you all cover with our
+                <div class="foot-section foot-about">
+                    <h3 class="foot-title">About us</h3>
+                    <p class="foot-desc">We are the biggest hyperstore in the universe.<br>We got you all cover with our
                         exclusive<br>collections and latest drops.</p>
                 </div>
 
                 <!-- Product categories -->
-                <div class="footer-block">
-                    <h3 class="section-title">Categories</h3>
-                    <ul class="item-list">
+                <div class="foot-section">
+                    <h3 class="foot-title">Categories</h3>
+                    <ul class="foot-list">
                         <li>Runners</li>
                         <li>Sneakers</li>
                         <li>Basketball</li>
@@ -366,9 +366,9 @@
                 </div>
 
                 <!-- Company information -->
-                <div class="footer-block">
-                    <h3 class="section-title">Company</h3>
-                    <ul class="item-list">
+                <div class="foot-section">
+                    <h3 class="foot-title">Company</h3>
+                    <ul class="foot-list">
                         <li>About</li>
                         <li>Contact</li>
                         <li>Blogs</li>
@@ -376,9 +376,9 @@
                 </div>
 
                 <!-- Social media links -->
-                <div class="footer-block">
-                    <h3 class="section-title">Follow us</h3>
-                    <div class="social-links">
+                <div class="foot-section">
+                    <h3 class="foot-title">Follow us</h3>
+                    <div class="foot-socials">
                         <span><i class="fa-solid fa-globe"></i></span>
                         <span><i class="fa-brands fa-instagram"></i></span>
                         <span><i class="fa-brands fa-x-twitter"></i></span>
@@ -388,7 +388,7 @@
             </div>
             
             <!-- Footer bottom with logo -->
-            <div class="very-bottom">
+            <div class="foot-end">
                 <img src="assets/home/kicksWhite.svg" alt="KICKS Logo">
             </div>
         </div>
